[package]
authors = [
  "Christian Larrabure",
]
description = "Lwmud is an asynchronous engine for text-based games."
edition = "2021"
keywords = ["mud"]
name = "lwmud"
version = "0.1.0"
readme = "README.md"
license = "MIT"
homepage = ""
repository = ""
documentation = ""

[dependencies]
futures = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
